--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 }
                 document.querySelector('#check').addEventListener('click', function() {
                     let user_input = document.querySelector('input');
-                    if (user_input.value === 'xyilo') {
+                    if (user_input.value === 'Zelenskyy') {
                         user_input.style.backgroundColor = 'green';
                         document.querySelector('#twoq').innerHTML = 'Correct';
                     }
@@ -44,11 +44,11 @@
                 <hr>
                 <!-- TODO: Add multiple choice question here -->
 
-                <h3>When the war started?</h3>
+                <h3>What is the capital of ukraine?</h3>
 
-                <button class="incorrect">2021</button>
-                <button class="incorrect">2022</button>
-                <button class="correct">2014</button>
+                <button class="incorrect">Lviv</button>
+                <button class="incorrect">Odessa</button>
+                <button class="correct">Kyiv</button>
                 <p id="oneq"></p>
 
             </div>
@@ -56,7 +56,7 @@
             <div class="section">
                 <h2>Part 2: Free Response</h2>
                 <hr>
-                <h3>Who is putin?</h3>
+                <h3>Who leads the Ukraine? (surname)</h3>
                 <input type="text"></input>
                 <button id="check">Check answ</button>
                 <p id="twoq"></p>
