--- a/index.html
+++ b/index.html
@@ -9,14 +9,26 @@
             document.addEventListener('DOMContentLoaded', function() {
                 let correct = document.querySelector('.correct');
                 correct.addEventListener('click', function() {
-                    correct.style.backgroundColor = 'green';
-                    document.querySelector('#oneq').innerHTML = 'Correct';
+                    if (correct.style.backgroundColor === 'green') {
+                        correct.style.backgroundColor = '';
+                        document.querySelector('#oneq').innerHTML = '';
+                    }
+                    else {
+                        correct.style.backgroundColor = 'green';
+                        document.querySelector('#oneq').innerHTML = 'Correct';
+                    }
                 });
                 let incorrects = document.querySelectorAll('.incorrect');
                 for (let i = 0; i < incorrects.length; i++) {
                     incorrects[i].addEventListener('click', function() {
-                        incorrects[i].style.backgroundColor = 'red';
-                        document.querySelector('#oneq').innerHTML = 'Incorrect';
+                        if (incorrects[i].style.backgroundColor === 'red') {
+                            incorrects[i].style.backgroundColor = '';
+                            document.querySelector('#oneq').innerHTML = '';
+                        }
+                        else {
+                            incorrects[i].style.backgroundColor = 'red';
+                            document.querySelector('#oneq').innerHTML = 'Incorrect';
+                        }
                     });
                 }
                 document.querySelector('#check').addEventListener('click', function() {
@@ -44,7 +56,7 @@
                 <hr>
                 <!-- TODO: Add multiple choice question here -->
 
-                <h3>What is the capital of ukraine?</h3>
+                <h3>What is the capital of Ukraine?</h3>
 
                 <button class="incorrect">Lviv</button>
                 <button class="incorrect">Odessa</button>
